--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ function gtag_report_conversion(url, target) {
                 </a>
             </div>
             <div class="imagempessoal"> 
-                <img src="/static/images/fotopessoal.jpeg" alt="Especialista Igor Novais" loading="lazy"> 
+                <img src="/static/images/fotopessoal.jpg" alt="Especialista Igor Novais" loading="lazy"> 
                 <div class="hero-badge">Especialista Igor Novais</div> 
             </div> 
         </div>
