Update print statement from 'Hello' to 'Goodbye'

--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -809,7 +809,7 @@ function gtag_report_conversion(url, target) {
 
     <!-- Foto -->
     <div class="hero-photo">
-      <img src="/static/images/fotopessoal.jpeg" alt="Especialista Igor Novais" loading="lazy">
+      <img src="/static/images/fotopessoal.jpg" alt="Especialista Igor Novais" loading="lazy">
       <div class="hero-badge" style="text-align: center;">Consultor Igor - CNH em Dia Soluções</div>
     </div>
   </div>
@@ -1225,6 +1225,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
