--- a/cnh-suspensa/index.html
+++ b/cnh-suspensa/index.html
@@ -673,7 +673,7 @@ function gtag_report_conversion(url, target) {
 
                 <!-- Foto -->
                 <div class="hero-photo">
-                  <img src="/static/images/fotopessoal.jpeg" alt="Especialista Igor Novais" loading="lazy">
+                  <img src="/static/images/fotopessoal.jpg" alt="Especialista Igor Novais" loading="lazy">
                   <div class="hero-badge">Especialista Igor Novais</div>
                 </div>
               </div>
@@ -1081,6 +1081,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
