--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -933,7 +933,7 @@ function gtag_report_conversion(url, target) {
         <div class="grid-3">
           <div class="card reveal">
             <div class="icon">🔎</div>
-            <h3>Análise técnica do auto</h3>
+            <h3>Análise do auto</h3>
             <p>Verificação de informações essenciais, formalidades e coerência documental do seu caso.</p>
           </div>
           <div class="card reveal">
@@ -1225,6 +1225,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
