Update print statement from 'Hello' to 'Goodbye'

--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -786,7 +786,7 @@ function gtag_report_conversion(url, target) {
 
       <p class="sub">
          Isso <strong>pode</strong> virar <strong>12 meses de suspensão</strong> e <strong>multa de R$ 2.934,70</strong>.
-  Antes de aceitar a multa, saiba que <strong>a maioria das multas por Bafômetro</strong> são aplicadas de forma indevida.<br><strong>Clique no Botão Abaixo E Saiba Se a Sua Multa Foi Aplicada Indevida.</strong> 
+  Antes de aceitar a multa, saiba que <strong>a maioria das multas por Bafômetro</strong> são aplicadas de forma indevida.<br><strong>Clique no Botão Abaixo E Saiba Se a Sua Multa Foi Aplicada Indevidamente.</strong> 
 </p>
 
       <div class="hero-actions">
@@ -1225,6 +1225,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
