Change greeting from 'Hello' to 'Goodbye'

--- a/cnh-suspensa/index.html
+++ b/cnh-suspensa/index.html
@@ -738,8 +738,8 @@ function gtag_report_conversion(url, target) {
                 </div>
 
                 <div class="cta-box">
-                  <div class="big" style="text-align:center;">✅ Análise gratuita + plano de ação</div>
-                  <div class="small" style="text-align:center;">Você entende o cenário e sai com um caminho claro. Sem enrolação.</div>
+                  <div class="big" style="text-align:center;">✅ Análise gratuita</div>
+                  <div class="small" style="text-align:center;">Você é atendido de imediato, com atendimento humanizado e poucos minutos já saberá como resolver o seu problema.</div>
                 </div>
 
                 <button type="button" class="btn btn-primary" id="btnWhats">
