--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -785,13 +785,12 @@ function gtag_report_conversion(url, target) {
       <h1>Caiu Na Blitz Do Bafômetro e Tomou a Multa?</h1>
 
       <p class="sub">
-         Isso <strong>pode</strong> virar <strong>12 meses de suspensão</strong> e <strong>multa de R$ 2.934,70</strong>.
-  Antes de aceitar a multa, saiba que <strong>a maioria das multas por Bafômetro</strong> são aplicadas de forma indevida.<br><strong>Clique no Botão Abaixo E Saiba Se a Sua Multa Foi Aplicada Indevidamente.</strong> 
+         A <strong>CNH EM DIA</strong> CUIDA DE TUDO PARA VOCÊ!. Evite a <strong>suspensão de 12 meses e multa de R$2.934,70.</strong><br><strong>Clique no Botão Abaixo E Fale Com Especialista.</strong> 
 </p>
 
       <div class="hero-actions">
         <a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+an%C3%A1lise+do+meu+caso+%28Lei+Seca%29.&type=phone_number&app_absent=0" id="ctaHero" target="_blank">
-          <span style="text-align:center;">Quero minha análise agora</span>
+          <span style="text-align:center;">Clique Aqui e Fale com Especialista</span>
           <span class="wa-dot" aria-hidden="true">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="20" height="20">
           </span>
@@ -1225,6 +1224,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
