--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -785,7 +785,7 @@ function gtag_report_conversion(url, target) {
       <h1>Caiu Na Blitz Do Bafômetro e Tomou a Multa?</h1>
 
       <p class="sub">
-         A <strong>CNH EM DIA</strong> CUIDA DE TUDO PARA VOCÊ!. Evite a <strong>suspensão de 12 meses e multa de R$2.934,70.</strong><br><strong>Clique no Botão Abaixo E Fale Com Especialista.</strong> 
+        Nós Da <strong>CNH Em DIA Soluções</strong> Cuidamos De Tudo Para Você! Evite a <strong>suspensão de 12 meses e multa de R$2.934,70.</strong><br><strong>Clique no Botão Abaixo E Fale Com Especialista.</strong> 
 </p>
 
       <div class="hero-actions">
@@ -1224,6 +1224,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
