--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -952,9 +952,9 @@ function gtag_report_conversion(url, target) {
     <!-- COMO FUNCIONA -->
     <section id="como-funciona">
       <div class="container">
-        <h2 class="section-title reveal" style="text-align:center;">Como funciona: do caos ao controle</h2>
+        <h2 class="section-title reveal" style="text-align:center;">Como funciona:</h2>
         <p class="section-sub reveal" style="text-align:center;">
-          Pensa como empresa de alta performance: entra demanda, faz diagnóstico, desenha estratégia e executa com cadência.
+          Pensamos da seguinte forma, fazemos o diagnóstico, desenhamos a estratégia e executamos com cadência.
         </p>
 
         <div class="timeline">
@@ -1224,6 +1224,7 @@ function gtag_report_conversion(url, target) {
   </script>
 </body>
 </html>
+
 
 
 
