--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -775,7 +775,7 @@
 
             <div class="form-group">
               <label for="telefone">Telefone (WhatsApp) *</label>
-              <input type="tel" id="telefone" name="telefone" required placeholder="(11) 99999-9999">
+              <input type="tel" id="telefone" name="telefone" required placeholder="(11) 99999-9999" maxlength="12">
             </div>
 
             <div class="form-group">
@@ -1006,3 +1006,4 @@ Telefone/WhatsApp: ${cidadeTel}`;
   </script>
 </body>
 </html>
+
