--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -686,10 +686,14 @@
         </div>
 
         <div class="cta-area" id="contato">
-          <button class="cta-btn" id="ctaTop">
+          <a class="cta-btn"
+   href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+   target="_self"
+   rel="noopener noreferrer"
+   onclick="return gtag_report_conversion(this.href, this.target);">
             <span>CLIQUE AQUI E ENVIE UM WHATSAPP</span>
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="22" height="22">
-          </button>
+          </a>
           <div class="cta-sub">
             Você fala agora com a CNH em Dia Soluções • (11) 99418-7695 • CNPJ: 63.687.598/0001-59 • Guarulhos/SP 
           </div>
@@ -722,7 +726,10 @@
                 Te pararam na blitz e deu positivo? A primeira coisa é organizar <strong>datas</strong> e <strong>documentos</strong>.
                 A orientação certa evita erro bobo.
               </p>
-              <button class="mini-btn js-wa" data-topic="Lei Seca (bafômetro positivo)">Falar com especialista</button>
+              <a class="mini-btn js-wa" data-topic="Lei Seca (bafômetro positivo)" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+   target="_self"
+   rel="noopener noreferrer"
+   onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
             </div>
           </div>
 
@@ -736,7 +743,10 @@
                 Recusou? Muita gente trava por medo. Aqui você entende o cenário e o que fazer
                 <strong>sem complicações</strong>.
               </p>
-              <button class="mini-btn js-wa" data-topic="Recusa ao bafômetro">Falar com especialista</button>
+              <a class="mini-btn js-wa" data-topic="Recusa ao bafômetro" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+   target="_self"
+   rel="noopener noreferrer"
+   onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
             </div>
           </div>
 
@@ -750,7 +760,10 @@
                 Chegou carta, mensagem ou notificação? O mais importante é:
                 <strong>qual é o prazo</strong>. A gente te guia.
               </p>
-              <button class="mini-btn js-wa" data-topic="Notificação / processo">Falar com especialista</button>
+              <a class="mini-btn js-wa" data-topic="Notificação / processo" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+   target="_self"
+   rel="noopener noreferrer"
+   onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
             </div>
           </div>
         </div>
@@ -902,10 +915,10 @@
 
   <!-- WhatsApp Float -->
   <a class="whatsapp-float" id="waFloat"
-     href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21+Vim+pelo+Google+e+quero+uma+orienta%C3%A7%C3%A3o+sobre+Lei+Seca%2Fbaf%C3%B4metro.&type=phone_number&app_absent=0"
-     target="_blank" rel="noopener noreferrer"
-     aria-label="Falar no WhatsApp"
-     onclick="return gtag_report_conversion(this.href, this.target);">
+     href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+   target="_self"
+   rel="noopener noreferrer"
+   onclick="return gtag_report_conversion(this.href, this.target);">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
   </a>
 
@@ -996,6 +1009,7 @@ E-mail: ${email}`;
 </script>
 </body>
 </html>
+
 
 
 
