--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -114,8 +114,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
-    .brand .name b{ color: var(--brand);
-    font-weight: 650; }
+    .brand .name b{ color: var(--brand); font-weight: 650; }
 
     .menu-btn{
       width: 42px; height: 42px;
@@ -203,7 +202,7 @@
       filter: contrast(1.02) saturate(1.02);
     }
 
-    /* CTA principal (estilo EasyGo: grande, simples, verde) */
+    /* CTA principal */
     .cta-area{
       margin-top: 14px;
       display:grid;
@@ -226,6 +225,7 @@
       box-shadow: 0 18px 35px rgba(37,211,102,.20);
       cursor:pointer;
       user-select:none;
+      -webkit-tap-highlight-color: transparent;
     }
     .cta-btn:active{ transform: translateY(1px); }
     .cta-sub{
@@ -244,7 +244,7 @@
     }
     .down svg{ width: 34px; height: 34px; }
 
-    /* ===== “Como podemos ajudar?” cards com botão ===== */
+    /* ===== Cards ===== */
     .section{
       padding: 18px 0 10px;
     }
@@ -311,9 +311,10 @@
       border: 1px solid rgba(11,18,32,.10);
       font-weight: 950;
       cursor:pointer;
+      -webkit-tap-highlight-color: transparent;
     }
 
-    /* ===== Form “orçamento” (FormSubmit) ===== */
+    /* ===== Form (FormSubmit) ===== */
     .form-box{
       margin-top: 16px;
       background: #fff;
@@ -381,14 +382,7 @@
       letter-spacing: .2px;
       cursor:pointer;
       box-shadow: #25D366;
-    }
-
-    .tiny-note{
-      margin-top: 10px;
-      color: var(--muted2);
-      font-size: 12.8px;
-      line-height: 1.5;
-      text-align:center;
+      -webkit-tap-highlight-color: transparent;
     }
 
     /* ===== Prova social / números ===== */
@@ -454,7 +448,7 @@
       line-height: 1.5;
     }
 
-    /* ===== FAQ (bem direto) ===== */
+    /* ===== FAQ ===== */
     details{
       background: #fff;
       border: 1px solid rgba(11,18,32,.10);
@@ -553,6 +547,7 @@
       place-items:center;
       z-index: 90;
       transition: .18s ease;
+      -webkit-tap-highlight-color: transparent;
     }
     .whatsapp-float:hover{ transform: translateY(-2px); }
     .whatsapp-float img{ width: 34px; height: 34px; }
@@ -607,6 +602,7 @@
       cursor:pointer;
       flex: 0 0 auto;
       box-shadow: 0 18px 35px rgba(37,211,102,.18);
+      -webkit-tap-highlight-color: transparent;
     }
     .sticky .go img{ width: 20px; height: 20px; }
 
@@ -616,17 +612,18 @@
       .whatsapp-float{ bottom: 16px; }
       .sticky{ display:none; }
       footer{ padding-bottom: 36px; }
-      .hero-visual img{ width: 40vw;
-    max-width: 300px;
-    height: auto;
-    object-fit: cover;
-    aspect-ratio: 1/1.3;
+      .hero-visual img{
+        width: 40vw;
+        max-width: 300px;
+        height: auto;
+        object-fit: cover;
+        aspect-ratio: 1/1.3;
       }
       .hero-visual{
-    display: none;
-      margin-top: 18px;
-      align-items: center;
-      background: none;
+        display: none;
+        margin-top: 18px;
+        align-items: center;
+        background: none;
       }
       .brand .name{
         font-size: 30px;
@@ -646,7 +643,6 @@
     <div class="wrap">
       <div class="topbar">
         <div class="brand">
-          <!-- LOGO: ajuste o nome do arquivo se o seu for diferente (ex.: logo-cnh.png) -->
           <img src="/static/images/logo.png" alt="CNH em Dia Soluções - Logo">
           <div class="name">CNH em <b>Dia Soluções</b></div>
         </div>
@@ -680,22 +676,23 @@
           Aqui você fala com um especialista que analisa, explica <strong>em linguagem simples</strong> o que pode ser feito.
         </p>
 
-        <!-- Imagem de referência (permitida) -->
         <div class="hero-visual" aria-hidden="true">
           <img src="/static/images/paginicial.png" alt="Ilustração">
         </div>
 
         <div class="cta-area" id="contato">
+          <!-- CTA TOP: link direto, target _self (Safari anônimo) -->
           <a class="cta-btn"
-   href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
-   target="_self"
-   rel="noopener noreferrer"
-   onclick="return gtag_report_conversion(this.href, this.target);">
+             href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+             target="_self"
+             rel="noopener noreferrer"
+             onclick="return gtag_report_conversion(this.href, this.target);">
             <span>CLIQUE AQUI E ENVIE UM WHATSAPP</span>
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="22" height="22">
           </a>
+
           <div class="cta-sub">
-            Você fala agora com a CNH em Dia Soluções • (11) 99418-7695 • CNPJ: 63.687.598/0001-59 • Guarulhos/SP 
+            Você fala agora com a CNH em Dia Soluções • (11) 99418-7695 • CNPJ: 63.687.598/0001-59 • Guarulhos/SP
           </div>
         </div>
 
@@ -726,10 +723,13 @@
                 Te pararam na blitz e deu positivo? A primeira coisa é organizar <strong>datas</strong> e <strong>documentos</strong>.
                 A orientação certa evita erro bobo.
               </p>
-              <a class="mini-btn js-wa" data-topic="Lei Seca (bafômetro positivo)" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
-   target="_self"
-   rel="noopener noreferrer"
-   onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
+
+              <!-- CARD CTA: link direto com mensagem específica -->
+              <a class="mini-btn"
+                 href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20site.%20Quero%20falar%20com%20um%20especialista%20sobre%3A%20Lei%20Seca%20%28baf%C3%B4metro%20positivo%29."
+                 target="_self"
+                 rel="noopener noreferrer"
+                 onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
             </div>
           </div>
 
@@ -743,10 +743,12 @@
                 Recusou? Muita gente trava por medo. Aqui você entende o cenário e o que fazer
                 <strong>sem complicações</strong>.
               </p>
-              <a class="mini-btn js-wa" data-topic="Recusa ao bafômetro" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
-   target="_self"
-   rel="noopener noreferrer"
-   onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
+
+              <a class="mini-btn"
+                 href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20site.%20Quero%20falar%20com%20um%20especialista%20sobre%3A%20Recusa%20ao%20baf%C3%B4metro."
+                 target="_self"
+                 rel="noopener noreferrer"
+                 onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
             </div>
           </div>
 
@@ -760,15 +762,17 @@
                 Chegou carta, mensagem ou notificação? O mais importante é:
                 <strong>qual é o prazo</strong>. A gente te guia.
               </p>
-              <a class="mini-btn js-wa" data-topic="Notificação / processo" href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
-   target="_self"
-   rel="noopener noreferrer"
-   onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
+
+              <a class="mini-btn"
+                 href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20site.%20Quero%20falar%20com%20um%20especialista%20sobre%3A%20Notifica%C3%A7%C3%A3o%20%2F%20processo."
+                 target="_self"
+                 rel="noopener noreferrer"
+                 onclick="return gtag_report_conversion(this.href, this.target);">Falar com especialista</a>
             </div>
           </div>
         </div>
 
-        <!-- FORM SUBMIT (captura + redireciona Whats) -->
+        <!-- FORM SUBMIT (não alterar) -->
         <div class="form-box" aria-label="Formulário de contato">
           <div class="form-head">
             <h3>Receba uma orientação agora mesmo</h3>
@@ -885,7 +889,6 @@
           </div>
         </details>
 
-        <!-- Consultor (pequeno, final) -->
         <div class="consultor" aria-label="Consultor responsável">
           <div class="avatar">
             <img src="/static/images/fotopessoal.jpg" alt="Consultor Igor - CNH em Dia Soluções" loading="lazy">
@@ -913,103 +916,51 @@
     </section>
   </main>
 
-  <!-- WhatsApp Float -->
-  <a class="whatsapp-float" id="waFloat"
+  <!-- WhatsApp Float (link direto + conversão, target _self) -->
+  <a class="whatsapp-float"
+     id="waFloat"
      href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
-   target="_self"
-   rel="noopener noreferrer"
-   onclick="return gtag_report_conversion(this.href, this.target);">
+     target="_self"
+     rel="noopener noreferrer"
+     aria-label="Falar no WhatsApp"
+     onclick="return gtag_report_conversion(this.href, this.target);">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
   </a>
 
-  <!-- Sticky (só mobile) -->
+  <!-- Sticky (só mobile) - virou link direto -->
   <div class="sticky" role="region" aria-label="Contato rápido no WhatsApp">
     <div class="inner">
       <div class="txt">
         <div class="t">Precisa de ajuda agora?</div>
         <div class="d">Clique e fale no WhatsApp (mensagem pronta)</div>
       </div>
-      <button class="go" id="stickyGo">
+
+      <a class="go"
+         id="stickyGo"
+         href="https://api.whatsapp.com/send/?phone=5511994187695&text=Ol%C3%A1%21%20Vim%20pelo%20Google.%20Preciso%20de%20orienta%C3%A7%C3%A3o%20sobre%20Lei%20Seca%2Fbaf%C3%B4metro.%20Pode%20me%20ajudar%3F"
+         target="_self"
+         rel="noopener noreferrer"
+         onclick="return gtag_report_conversion(this.href, this.target);">
         <span>WhatsApp</span>
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-      </button>
+      </a>
     </div>
   </div>
 
   <script>
-  const WHATS_NUMBER = "5511994187695";
+    // Mantém só o menu (WhatsApp agora é 100% link direto -> não dá pau no Safari anônimo)
+    const menuBtn = document.getElementById("menuBtn");
+    const menu = document.getElementById("menu");
+    menuBtn?.addEventListener("click", ()=>{
+      const isOpen = menu.style.display === "block";
+      menu.style.display = isOpen ? "none" : "block";
+      menuBtn.setAttribute("aria-expanded", isOpen ? "false" : "true");
+    });
 
-  function isIOS(){ return /iPhone|iPad|iPod/i.test(navigator.userAgent); }
-
-  function openWhats(text){
-    const urlIOS = `https://api.whatsapp.com/send/?phone=${WHATS_NUMBER}&text=${encodeURIComponent(text)}`;
-    const urlDefault = `https://wa.me/${WHATS_NUMBER}?text=${encodeURIComponent(text)}`;
-    const url = isIOS() ? urlIOS : urlDefault;
-
-    // conversão
-    try{
-      if (typeof gtag === "function") {
-        gtag("event", "conversion", {
-          send_to: "AW-17709604708/3A1hCK-KneYbEOS-zPxB",
-          transport_type: "beacon",
-          event_timeout: 1200
-        });
-      }
-    }catch(e){}
-
-    // abre WhatsApp (iOS melhor mesma aba)
-    if (isIOS()) window.location.href = url;
-    else window.open(url, "_blank", "noopener,noreferrer");
-  }
-
-  const contactForm = document.getElementById("contactForm");
-
-  contactForm?.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const nome = document.getElementById("nome")?.value?.trim() || "";
-    const assunto = document.getElementById("assunto")?.value || "Lei Seca";
-    const telefone = document.getElementById("telefone")?.value?.trim() || "";
-    const email = document.getElementById("email")?.value?.trim() || "";
-
-    const mensagem =
-`Olá! Me chamo ${nome}.
-Preenchi o formulário no site e quero resolver meu problema de: ${assunto}.
-Telefone/WhatsApp: ${telefone}
-E-mail: ${email}`;
-
-    const formData = new FormData(contactForm);
-
-    // garante subject/captcha mesmo se você esquecer no HTML
-    if (!formData.get("_subject")) formData.append("_subject", "Nova solicitação - CNH em Dia Soluções");
-    if (!formData.get("_captcha")) formData.append("_captcha", "false");
-    if (!formData.get("_template")) formData.append("_template", "table");
-
-    const endpoint = contactForm.getAttribute("action") || "https://formsubmit.co/cnhemdiasolucoes@gmail.com";
-
-    try {
-      const response = await fetch(endpoint, {
-        method: "POST",
-        body: formData,
-        headers: { "Accept": "application/json" }
-      });
-
-      if (response.ok) {
-        contactForm.reset();
-        openWhats(mensagem);
-      } else {
-        alert("❌ Não consegui enviar o formulário. Me chama no WhatsApp que eu resolvo agora.");
-        openWhats(mensagem);
-      }
-    } catch (err) {
-      alert("❌ Seu navegador bloqueou o envio. Me chama no WhatsApp que eu resolvo agora.");
-      openWhats(mensagem);
-    }
-  });
-</script>
+    // Fecha menu ao clicar em um item
+    document.querySelectorAll('#menu a').forEach(a=>{
+      a.addEventListener('click', ()=>{ menu.style.display = "none"; menuBtn?.setAttribute("aria-expanded","false"); });
+    });
+  </script>
 </body>
 </html>
-
-
-
-
