--- a/lei-seca-bafometro/index.html
+++ b/lei-seca-bafometro/index.html
@@ -773,7 +773,7 @@
         </div>
 
         <!-- FORM SUBMIT (não alterar) -->
-        <div class="form-box" aria-label="Formulário de contato">
+        <div class="form-box" aria-label="Formulário de contato" id="enviodecontato">
           <div class="form-head">
             <h3>Receba uma orientação agora mesmo</h3>
             <p>É rápido. Preencha e você já vai direto pro WhatsApp com a mensagem pronta.</p>
@@ -1040,4 +1040,5 @@ E-mail: ${email}`;
   
  </body>
 </html>
+
 
